--- a/config.toml
+++ b/config.toml
@@ -93,20 +93,24 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     url = "https://t.me/paulcosma"
 
   [[params.personal]]
-      name = "facebook"
-      url = "https://t.me/paulcosma"
+    name = "plex"
+    url = "https://plex.paulcosma.com"
 
   [[params.personal]]
-      name = "email"
-      url = "https://t.me/paulcosma"
+      name = "jenkins"
+      url = "https://jenkins.paulcosma.com"
 
   [[params.personal]]
-      name = "telegram"
-      url = "https://t.me/paulcosma"
+    name = "plex2"
+    url = "https://plex.paulcosma.com"
 
   [[params.personal]]
-      name = "instagram"
-      url = "https://t.me/paulcosma"
+      name = "jenkins2"
+      url = "https://jenkins.paulcosma.com"
+
+  [[params.personal]]
+      name = "torrent"
+      url = "https://jenkins.paulcosma.com"
 
 [menu]
 
