--- a/config.toml
+++ b/config.toml
@@ -49,7 +49,7 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
   relatedPosts = false  # Add a related content section to all single posts page
 
   code_copy_button = true # Turn on/off the code-copy-button for code-fields
-  
+
   # Add custom css
   # customCSS = ["css/foo.css", "css/bar.css"]
 
@@ -169,8 +169,8 @@ enableEmoji = true  # Shorthand emojis in content files - https://gohugo.io/func
     url = "https://calculator.paulcosma.com"
 
   [[params.personal]]
-    name = "angular"
-    url = "https://angular.paulcosma.com"
+    name = "pihole"
+    url = "https://pihole.paulcosma.com"
 
 [menu]
 
